file模块翻译功能初始化